tests/ui/g-par-role-conflict.stderr
error[E0080]: evaluation panicked: parallel lanes must use disjoint (role, lane) pairs
 --> src/g.rs
  |
  |         { <Left as Choreography>::SOURCE.par(<Right as Choreography>::SOURCE) };
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::g::Par<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<1>, hibana::g::Msg<3, ()>>, hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<2>, hibana::g::Msg<4, ()>>> as hibana::g::Choreography>::SOURCE` failed inside this call
  |
note: inside `g::ProgramSourceData::par`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |             panic!("parallel lanes must use disjoint (role, lane) pairs");
  |             ------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |         let source = <Steps as Choreography>::SOURCE.eff_list();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g.rs
  |
  |     &ProjectedChoreography::<Steps>::PROGRAM_IMAGE
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |                 Self::STAMP,
  |                 ^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::role_program::program::project_choreography_role::<0, Par<hibana::g::Send<Role<0>, Role<1>, Msg<3, ()>>, hibana::g::Send<Role<0>, Role<2>, Msg<4, ()>>>>`
 --> src/global/role_program/program.rs
  |
  |         project_choreography_role(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
